noinst_LIBRARIES = libcc.a

AM_CFLAGS=$(WARN_CFLAGS) $(LIBUSB_CFLAGS)

libcc_a_SOURCES = \
	ccdbg-command.c \
	ccdbg-debug.c \
	ccdbg-flash.c \
	ccdbg.h \
	ccdbg-hex.c \
	ccdbg-io.c \
	ccdbg-manual.c \
	ccdbg-memory.c \
	ccdbg-rom.c \
	ccdbg-state.c \
	cc-usb.c \
	cc-usb.h \
	cc-bitbang.c \
	cc-bitbang.h \
	cp-usb.c \
	cp-usb-async.c
